frontend/tests/cases/negative/polymorphism/badExistential.gr
import Existential

unpackBad : forall {t : Type, f : Type -> Type, a : Type}
       . Exists f -> (f t -> a) -> a
unpackBad (MkExists x) f = unpack < a , y > = x in f y
